@@ -2,6 +2,8 @@
  - (djm) Fix SSH2 not terminating until all background tasks done problem.
  - (djm) Another off-by-one fix from Pavel Kankovsky 
    <peak@argo.troja.mff.cuni.cz> 
+ - (djm) Clean up. Strip some unnecessary differences with OpenBSD's code,
+   tidy necessary differences. Use Markus' new debugN() in entropy.c
 
 20000926
  - (djm) Update X11-askpass to 1.0.2 in RPM spec file
